force-app/main/default/objects/Car__c/Car__c.object-meta.xml
<CustomObject>
    <label>Car</label>
    <nameField>
        <displayFormat>CAR-{0000}</displayFormat>
        <label>Car Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>