force-app/main/default/objects/Car__c/fields/Car_Trim__c.field-meta.xml
<CustomField>
    <fullName>Car_Trim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Car Trim</label>
    <referenceTo>Car_Trim__c</referenceTo>
    <relationshipLabel>Cars</relationshipLabel>
    <relationshipName>Cars</relationshipName>
    <type>Lookup</type>
</CustomField>