force-app/main/default/objects/Car__c/fields/Condition_of_the_Car__c.field-meta.xml
<CustomField>
    <fullName>Condition_of_the_Car__c</fullName>
    <label>Condition of the Car</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Used</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>