force-app/main/default/objects/Car__c/fields/Days_Until_Insurance_s_End__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Insurance_s_End__c</fullName>
    <label>Days Until Insurance&apos;s End</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>