force-app/main/default/objects/Car__c/fields/Days_Until_Next_Car_Review__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Next_Car_Review__c</fullName>
    <label>Days Until Next Car Review</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>