force-app/main/default/objects/Car__c/fields/Does_Need_Timing_Replacement__c.field-meta.xml
<CustomField>
    <fullName>Does_Need_Timing_Replacement__c</fullName>
    <formula>IF( Mileage__c -  Mileage_When_Last_Timing_Replacement__c &gt; 120000, &apos;ZDECYDOWANIE TAK&apos;, 
	IF(Mileage__c -  Mileage_When_Last_Timing_Replacement__c &gt; 85000, &apos;TAK&apos;, &apos;NIE&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Does Need Timing Replacement</label>
    <type>Text</type>
</CustomField>