force-app/main/default/objects/Car__c/fields/Last_Car_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Car_Review_Date__c</fullName>
    <label>Last Car Review Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>