force-app/main/default/objects/Car__c/fields/Mileage_When_Last_Timing_Replacement__c.field-meta.xml
<CustomField>
    <fullName>Mileage_When_Last_Timing_Replacement__c</fullName>
    <label>Mileage When Last Timing Replacement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>