force-app/main/default/objects/Car__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Giulietta</fullName>
            </value>
            <value>
                <fullName>Giulia</fullName>
            </value>
            <value>
                <fullName>Montreal</fullName>
            </value>
            <value>
                <fullName>TT</fullName>
            </value>
            <value>
                <fullName>RS7</fullName>
            </value>
            <value>
                <fullName>A4</fullName>
            </value>
            <value>
                <fullName>x6</fullName>
            </value>
            <value>
                <fullName>X7</fullName>
            </value>
            <value>
                <fullName>i8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>