force-app/main/default/objects/Car__c/fields/Number_of_Seats__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Seats__c</fullName>
    <label>Number of Seats</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Model__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>