force-app/main/default/objects/Car__c/fields/The_Cost_of_the_All_Repairs__c.field-meta.xml
<CustomField>
    <fullName>The_Cost_of_the_All_Repairs__c</fullName>
    <label>The Cost of the All Repairs</label>
    <summarizedField>Repair__c.Cost__c</summarizedField>
    <summaryForeignKey>Repair__c.Car__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>