force-app/main/default/objects/Car__c/fields/Type_of_Fuel__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Fuel__c</fullName>
    <label>Type of Fuel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gasoline</fullName>
            </value>
            <value>
                <fullName>Diesel</fullName>
            </value>
            <value>
                <fullName>Bio-diesel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>