force-app/main/default/objects/Car__c/recordTypes/Alfa_Romeo.recordType-meta.xml
<RecordType>
    <fullName>Alfa_Romeo</fullName>
    <active>true</active>
    <label>Alfa Romeo</label>
</RecordType>