force-app/main/default/objects/Car__c/recordTypes/Audi.recordType-meta.xml
<RecordType>
    <fullName>Audi</fullName>
    <active>true</active>
    <label>Audi</label>
</RecordType>