force-app/main/default/objects/Car__c/recordTypes/BMW.recordType-meta.xml
<RecordType>
    <fullName>BMW</fullName>
    <active>true</active>
    <label>BMW</label>
</RecordType>