force-app/main/default/objects/Car__c/validationRules/MileageLowerThanZero.validationRule-meta.xml
<ValidationRule>
    <fullName>MileageLowerThanZero</fullName>
    <active>true</active>
    <errorConditionFormula>Mileage__c &lt; 0 ||  Mileage_When_Last_Timing_Replacement__c &lt; 0</errorConditionFormula>
    <errorMessage>Mileage cannot be lower than zero.</errorMessage>
</ValidationRule>