force-app/main/default/objects/Car__c/validationRules/ProductionYearValidationRule.validationRule-meta.xml
<ValidationRule>
    <fullName>ProductionYearValidationRule</fullName>
    <active>true</active>
    <errorConditionFormula>Production_Year__c &gt; YEAR(TODAY()) &amp;&amp; Production_Year__c &lt; 2000</errorConditionFormula>
    <errorDisplayField>Production_Year__c</errorDisplayField>
    <errorMessage>The car&apos;s production year must be between 2000 and the current one.</errorMessage>
</ValidationRule>