force-app/main/default/objects/Car__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Model__c</columns>
    <columns>Status__c</columns>
    <columns>Production_Year__c</columns>
    <columns>Mileage__c</columns>
    <columns>Insurance_Expiry_Date__c</columns>
    <columns>Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>